responsive grid, some text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
 
 	<div id="content">
-		<div class="grow-box">1</div>
+		<div class="grow-box">
+            <p class="small">Develop &amp; Design</p>
+        <h2>Hi, I'm Barbara, <br/>
+            a developer with the drive and passion to create products with intuitive and meaningful user interface.
+        </h2>
+        </div>
 		<div class="box">2</div>
 		<div class="box">3</div>
 		<div class="box">4</div>
@@ -37,12 +42,8 @@
     <footer id="footer" class="clearfix">
         <p class="alignleft">&copy;
             <script>document.write(new Date().getFullYear())</script> Barbara Fick. All Rights Reserved.</p>
-
     </footer>
+
 </body>
 
-</html> 
-
-   
- 
- 
+</html>
